--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,7 +18,9 @@ ADD_SUBDIRECTORY(lib_behaviors-test)
 ADD_SUBDIRECTORY(pXRelayTest)
 ADD_SUBDIRECTORY(pExampleApp)
 ADD_SUBDIRECTORY(pOdometry)
-ADD_SUBDIRECTORY(pTest)
+ADD_SUBDIRECTORY(test/pTest)
+ADD_SUBDIRECTORY(test/pshoresideVehicle)
+ADD_SUBDIRECTORY(test/pvehicle)
 ADD_SUBDIRECTORY(pPrimeFactor)
 ADD_SUBDIRECTORY(pNumberCal)
 ADD_SUBDIRECTORY(pChirp)
