--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -24,6 +24,7 @@ ADD_SUBDIRECTORY(test/pvehicle)
 ADD_SUBDIRECTORY(pPrimeFactor)
 ADD_SUBDIRECTORY(pNumberCal)
 ADD_SUBDIRECTORY(pChirp)
+ADD_SUBDIRECTORY(pPointAssign)
 #ADD_SUBDIRECTORY(pFoobar)
 #ADD_SUBDIRECTORY(pOdometry)
 
