--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,6 +20,7 @@ ADD_SUBDIRECTORY(pExampleApp)
 ADD_SUBDIRECTORY(pOdometry)
 ADD_SUBDIRECTORY(test/pTest)
 ADD_SUBDIRECTORY(test/pshoresideVehicle)
+ADD_SUBDIRECTORY(test/pNewmailIterate)
 ADD_SUBDIRECTORY(test/pvehicle)
 ADD_SUBDIRECTORY(pPrimeFactor)
 ADD_SUBDIRECTORY(pNumberCal)
